--- a/readme.org
+++ b/readme.org
@@ -11,11 +11,17 @@
   ➜ telnet localhost 9999
   #+END_EXAMPLE
 
-* TODO 待完成 [2/7]
-  - [X] telnet echo 交互
-  - [X] libevent
-  - [ ] http 协议解析
+* TODO 待完成 [3/13]
+  - [X] [2018-06-01] telnet echo 交互
+  - [X] [2018-06-01] libevent
+  - [X] [2018-06-03] 支持 protocol text
+  - [ ] 支持 protocol json, jsonInt
+  - [ ] log
+  - [ ] libevent write event
+  - [ ] http 基本协议解析
   - [ ] rpc
   - [ ] fork, daemon
   - [ ] signal
-  - [ ] ...
+  - [ ] http session, http keep alive ..
+  - [ ] 看 nginx 源码
+  - [ ] protocol 解析有问题，解析不完整的协议包的时候，连接还是保持着，这里应该有个超时断开
