--- a/readme.org
+++ b/readme.org
@@ -11,7 +11,7 @@
   ➜ telnet localhost 9999
   #+END_EXAMPLE
 
-* TODO 待完成 [5/13]
+* TODO 待完成 [5/16]
   - [X] [2018-06-01] telnet echo 交互
   - [X] [2018-06-01] libevent
   - [X] [2018-06-03] 支持 protocol text
@@ -19,7 +19,10 @@
   - [X] [2018-06-05] daemon, =php index start -d=, =php index stop=
   - [ ] http 基本协议解析
   - [ ] http session, http keep alive ..
+  - [ ] redis 协议
+  - [ ] 连接池
   - [ ] rpc
+  - [ ] 协程
   - [ ] protocol 解析有问题，解析不完整的协议包的时候，连接还是保持着，这里应该有个超时断开
   - [ ] 多 worker 支持
   - [ ] signal
