update async tcpconnection

--- a/workerman-async-tcpconnection.org
+++ b/workerman-async-tcpconnection.org
@@ -2,13 +2,11 @@
   这个可以参考 《unix 网路编程》的 =16.3 节：非阻塞 connect=
   异步 connection 如果在 connect 的时候返回 0，那么表示连接立即连上了。如果返回的值不是 0，那么有可能是出错了，只有一种情况下是正常的， =errno=EINPROGRESS= 的时候，当 errno 值是 EINPROGRESS 的时候，就要检查连接什么时候生效了。检查的原理是：
   如果 tcp 连接上了或者是正在连接中，那么该 client socket 可写的（连接出错的时候是 =可读且可写= 的），我们只要监听该 socket 的可写事件再判断是否是连接出错。判断连接是否有效 《unix 网路编程》 里面也提出了下面几种方法：
-  1. 使用 getsocketopt 的 SO_ERROR 选项来获取 socket 错误
-     getsocketopt(client_fd, SOL_SOCKET, SO_ERROR, &error, &len)
+  1. 使用 getsocketopt 的 SO_ERROR 选项来获取 socket 错误 =getsocketopt(client_fd, SOL_SOCKET, SO_ERROR, &error, &len)=
 
   2. 使用 getpeername，那么错误是 =ENOTCONN= 就是没连接上
 
-  3. 用长度值为 0 的 read 调用测试该连接有没有效。如果连接上了，read 返回 0；连接不上，read 会返回对应错误码
-     read(client, 0)
+  3. 用长度值为 0 的 read 调用测试该连接有没有效。如果连接上了，read 返回 0；连接不上，read 会返回对应错误码 =read(client, 0)=
 
   4. 再调用一次 connect，如果失败，错误是 =EISCONN=
 
